Fixed alignment for code view editor

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -310,6 +310,7 @@ $lure: #f52d60;
     padding: 10px;
     &.bot-config-popup{
         padding: 0px;
+        text-align: left;
     }
 }
 
